Positioning over image

--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     </head>
     <body>
         <div id="scrollableElement">
-            <img src="images/image.png">
+            <img id="backgroundImage" src="images/image.png">
+
+            <div id="faq">
+                <h1>FAQ</h1>
+            </div>
+    
+            <div id="schedule">
+                <h1>Schedule</h1>
+                <button>Click here to view the schedule!</button>
+            </div>
         </div>
+
         <script src="js/script.js"></script>
     </body>
 </html>
