--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <div id="scrollableElement">
             <img id="backgroundImage" src="images/image.png">
 
-            <div id="faq">
+            <div class="overImage" id="faq">
                 <h1>FAQ</h1>
             </div>
     
-            <div id="schedule">
+            <div class="overImage" id="schedule">
                 <h1>Schedule</h1>
                 <button>Click here to view the schedule!</button>
             </div>
