--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
         <div id="scrollableElement">
             <img id="backgroundImage" src="images/image.png">
 
-            <div class="overImage" id="faq">
-                <h1>FAQ</h1>
-            </div>
-    
-            <div class="overImage" id="schedule">
-                <h1>Schedule</h1>
-                <button>Click here to view the schedule!</button>
+            <!-- Put any divs that should be overlayed ontop of the background image here. -->
+            <!-- Then in css/styles.css, add absolute positioning (see #faq or #schedule as examples) -->
+            <div class="overImage" >
+                <div id="faq">
+                    <h1>FAQ</h1>
+                </div>
+
+                <div id="schedule">
+                    <h1>Schedule</h1>
+                    <button>Click here to view the schedule!</button>
+                </div>
             </div>
         </div>
 
