scroll to feature

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
             <!-- Put any divs that should be overlayed ontop of the background image here. -->
             <!-- Then in css/styles.css, add absolute positioning (see #faq or #schedule as examples) -->
             <div class="overImage" >
+                <div id="nav">
+                    <p onclick="smoothScroll('faq')">FAQ</p>
+                    <p onclick="smoothScroll('schedule')">Schedule</p>          
+                </div>
                 <div id="faq">
                     <h1>FAQ</h1>
                 </div>
