--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <!-- Styling -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
+
+        <!-- External javascript -->
+        <script src="js/jquery-3.6.1.min.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
         <div id="scrollableElement">
