--- a/index.html
+++ b/index.html
@@ -36,19 +36,28 @@
                             <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal4">What does the application process and timeline look like?</button>
                         </li>
                         <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal5">What can I make and who can I work with?</button>
+                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal5">Is Hacks only for undergraduate students??</button>
                         </li>
                         <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal6">What if I'm new to coding?</button>
+                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal6">What can I make and who can I work with?</button>
                         </li>
                         <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal7">How much does it cost?</button>
+                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal7">What if I'm new to coding?</button>
                         </li>
                         <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal8">What if I have other questions?</button>
+                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal8">How much does it cost?</button>
                         </li>
                         <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal9">How do I stay in touch with Uncommon Hacks?</button>
+                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal9">Did you say prizes?</button>
+                        </li>
+                        <li>
+                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal10">What should I bring?</button>
+                        </li>
+                        <li>
+                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal11">What if I have other questions?</button>
+                        </li>
+                        <li>
+                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal12">How do I stay in touch with Uncommon Hacks?</button>
                         </li>
                     </ul>
                 </div>
@@ -118,17 +127,30 @@
                 <div class="modal-dialog ">
                     <div class="modal-content">
                         <div class="modal-header">
-                            What can I make and who can I work with?
+                            Is Hacks only for undergraduate students?
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <p>You are encouraged to work in teams of up to four (4) people! Collaborating with hackers across different schools is especially welcome. We will offer plenty of opportunities for you to meet new people and make teams.</p>
-                            <p>Our hackers created the most whimsical projects, from programatic contemporary art to a UChicago-themed battle royale. Check out our 2022 winning project gallery <a href="https://uncommonhacks-2022.devpost.com/project-gallery">here</a></p>
+                            <p>No, high school or university students are welcome to come join us!</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="modal fade " id="faqModal6" tabindex="-1">
+                <div class="modal-dialog ">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            What can I make and who can I work with?
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>You are encouraged (but not required) to work in teams of up to five (5) people! Collaborating with hackers across different schools is especially welcome. We will offer plenty of opportunities for you to meet new people and make teams.</p>
+                            <p>Our hackers created the most whimsical projects, from programatic contemporary art to a UChicago-themed battle royale. Check out our 2022 winning project gallery <a href="https://uncommonhacks-2022.devpost.com/project-gallery">here</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade " id="faqModal7" tabindex="-1">
                 <div class="modal-dialog ">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -141,7 +163,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade " id="faqModal7" tabindex="-1">
+            <div class="modal fade " id="faqModal8" tabindex="-1">
                 <div class="modal-dialog ">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -154,7 +176,33 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade " id="faqModal8" tabindex="-1">
+            <div class="modal fade " id="faqModal9" tabindex="-1">
+                <div class="modal-dialog ">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            Did you say prizes?
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Affirmative, we will be handing out various prizes to the top submissions.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade " id="faqModal10" tabindex="-1">
+                <div class="modal-dialog ">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            What should I bring?
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>The basic thing is a laptop, and if you are planning on staying the night we recommend some additional items: a sleeping bag, change of clothes, and a toothbrush/toothpaste, but you don't have to stay the night although we may have limitations on when people can enter and exit the venue during the night. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade " id="faqModal11" tabindex="-1">
                 <div class="modal-dialog ">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -167,7 +215,7 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade " id="faqModal9" tabindex="-1">
+            <div class="modal fade " id="faqModal12" tabindex="-1">
                 <div class="modal-dialog ">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -187,6 +235,7 @@
             <div class="modal-dialog ">
             <div class="modal-content">
                 <div class="modal-header">
+                    Schedule
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
