--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <p>March 24th-26th 2023 @ the Polsky Exchange, 1452 E 53rd St., 2nd floor, Chicago, IL, 60615 (someone confirm this)</p>
+                            <p>March 24th-26th 2023 @ the Polsky Exchange, 1452 E 53rd St., 2nd floor, Chicago, IL, 60615</p>
                         </div>
                     </div>
                 </div>
