--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             <!-- Then in css/styles.css, add absolute positioning (see #faq or #schedule as examples) -->
             <div class="overImage" >
                 <div id="nav">
+                    <p onclick="smoothScroll('title')">Home</p>
                     <p onclick="smoothScroll('faq')">FAQ</p>
                     <p onclick="smoothScroll('schedule')">Schedule</p>          
                 </div>
+                <div id="title"></div>
                 <div id="faq">
                     <h1>FAQ</h1>
                     <ul>
