Cursor implementation with wrong image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="js/jquery-3.6.1.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
     </head>
-    <body>
+    <body class="bunnycursor">
         <div id="scrollableElement">
             <img id="backgroundImage" src="images/image.png">
 
