added about section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
                     <p onclick="smoothScroll('schedule')">Schedule</p>          
                 </div>
                 <div id="title"></div>
+                <div class="section_heading">About</div>
+                       <p>
+                        Founded in 2016, Uncommon Hacks is a weekend-long celebration of
+                        technology where college students worldwide come to Chicago to make fun,
+                        random, and innovative tech-related projects with friends old and new.
+                        Every year, we work hard to create a hackathon where all are welcome,
+                        regardless of experience or background, and where outside-the-box projects
+                        and creative thinking are encouraged! All Uncommon Hacks events follow the MLH Code of Conduct.
+                        <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH Code of Conduct</a>.
+                        </p>
+                    </div>
                 <div id="faq">
                     <h1>FAQ</h1>
                     <ul>
