--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
                     <p onclick="smoothScroll('schedule')">Schedule</p>          
                 </div>
                 <div id="title"></div>
-                <div class="section_heading">About</div>
+                <div id="About" >
+                        <h1>About</h1>
                        <p>
-                        Founded in 2016, Uncommon Hacks is a weekend-long celebration of
-                        technology where college students worldwide come to Chicago to make fun,
-                        random, and innovative tech-related projects with friends old and new.
-                        Every year, we work hard to create a hackathon where all are welcome,
-                        regardless of experience or background, and where outside-the-box projects
-                        and creative thinking are encouraged! All Uncommon Hacks events follow the MLH Code of Conduct.
-                        <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf">MLH Code of Conduct</a>.
+                        Welcome to Uncommon Hacks, the official hackathon of the University of Chicago! 
+                        Spend 24 hours working on a project and meeting cool people in this one-of-a-kind experience!
+                        In our 2023 edition of Hacks, we're excited to bring you the biggest event since the pandemic,
+                        including the overnight component that makes for a truly unforgettable experience.
+                        
+                        Although Hacks will have prizes, we place more emphasis on learning and collaboration than some kind of competitive aspect.
+                        So even if you've never coded before, please do sign up! A successful Hacks team needs people with different skill sets,
+                        and if you would like to learn how to code, we'll have workshops to help you do so.
                         </p>
                     </div>
                 <div id="faq">
