added the about link

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             <div class="overImage" >
                 <div id="nav">
                     <p onclick="smoothScroll('title')">Home</p>
+                    <p onclick="smoothScroll('about')">About</p>     
                     <p onclick="smoothScroll('faq')">FAQ</p>
-                    <p onclick="smoothScroll('schedule')">Schedule</p>          
+                    <p onclick="smoothScroll('schedule')">Schedule</p>
+                         
                 </div>
                 <div id="title"></div>
-                <div id="About" >
+                <div id="about" >
                         <h1>About</h1>
                        <p>
                         Welcome to Uncommon Hacks, the official hackathon of the University of Chicago! 
