added the 3 sections

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                     <p onclick="smoothScroll('about')">About</p>     
                     <p onclick="smoothScroll('faq')">FAQ</p>
                     <p onclick="smoothScroll('schedule')">Schedule</p>
-                         
+                    <p onclick="smoothScroll('members')">Members</p>  
+                    <p onclick="smoothScroll('sponsor')">Sponsor</p>  
+                    <p onclick="smoothScroll('socials')">Socials</p>  
                 </div>
                 <div id="title"></div>
                 <div id="about" >
@@ -83,6 +85,22 @@
                     <h1>Schedule</h1>
                     <button class="scheduleButton" data-bs-toggle="modal" data-bs-target="#scheduleModal">View the Schedule</button>
                 </div>
+
+                <div id="members">
+                    <h1>Members</h1>
+                    <img src="https://img.freepik.com/free-photo/clueless-bearded-man-shrugs-shoulders-looks-puzzled-unaware-say-i-dont-understand_273609-52498.jpg?size=626&ext=jpg&ga=GA1.2.1996720489.1676951264&semt=ais">
+                </div>
+
+                <div id="sponsor">
+                    <h1>Sponsor</h1>
+                    <img src="https://d3qi0qp55mx5f5.cloudfront.net/beijing/i/basic_pages_large_images/Capture_(1).JPG?mtime=1573029069">
+                </div>
+                
+                <div id="socials">
+                    <h1>Socials</h1>
+                    <img src="https://i.guim.co.uk/img/media/e5615baded59d4a97c7cf68c4f77609dc1f98df7/0_200_3000_1800/master/3000.jpg?width=700&quality=45&dpr=2&s=none">
+                </div>
+
             </div>
         </div>
 
