is this a good feature

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <!-- Put any divs that should be overlayed ontop of the background image here. -->
             <!-- Then in css/styles.css, add absolute positioning (see #faq or #schedule as examples) -->
-            <div class="overImage" >
+            <div class="overImage">
                 <div id="nav">
                     <p onclick="smoothScroll('title')">Home</p>
                     <p onclick="smoothScroll('about')">About</p>     
@@ -25,6 +25,7 @@
                     <p onclick="smoothScroll('sponsor')">Sponsor</p>  
                     <p onclick="smoothScroll('socials')">Socials</p>  
                 </div>
+                <div id="runner"><img id="alice" src="https://cdna.artstation.com/p/assets/images/images/018/109/562/original/ha-trang-nguyen-runcycle.gif?1558393201"></div>
                 <div id="title"></div>
                 <div id="about" >
                         <h1>About</h1>
