FAQ button color; nonscrollable elem

--- a/index.html
+++ b/index.html
@@ -41,44 +41,47 @@
                     </div>
                 <div id="faq">
                     <h1>FAQ</h1>
-                    <ul>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal1">What's a hackathon?</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal2">How do I apply?</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal3">When and where is Uncommon Hacks?</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal4">What does the application process and timeline look like?</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal5">Is Hacks only for undergraduate students??</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal6">What can I make and who can I work with?</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal7">What if I'm new to coding?</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal8">How much does it cost?</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal9">Did you say prizes?</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal10">What should I bring?</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal11">What if I have other questions?</button>
-                        </li>
-                        <li>
-                            <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal12">How do I stay in touch with Uncommon Hacks?</button>
-                        </li>
-                    </ul>
+                    <div class="nonScrollableElement">
+                        <ul>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal1">What's a hackathon?</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal2">How do I apply?</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal3">When and where is Uncommon Hacks?</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal4">What does the application process and timeline look like?</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal5">Is Hacks only for undergraduate students??</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal6">What can I make and who can I work with?</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal7">What if I'm new to coding?</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal8">How much does it cost?</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal9">Did you say prizes?</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal10">What should I bring?</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal11">What if I have other questions?</button>
+                            </li>
+                            <li>
+                                <button class="faqButton" data-bs-toggle="modal" href="" data-bs-target="#faqModal12">How do I stay in touch with Uncommon Hacks?</button>
+                            </li>
+                        </ul>
+                    </div>
+                    
                 </div>
 
                 <div id="schedule">
